--- a/intro-presentasjon/workshop2016.html
+++ b/intro-presentasjon/workshop2016.html
@@ -77,7 +77,7 @@
 
 
 			  <section>
-			    <a href="http://akademix.no/workshop">http://akademix.no/workshop</a>
+			    <a href="http://akademix.no/workshop">akademix.no/workshop</a>
 			  </section>
 			
 			  <section>
@@ -156,8 +156,8 @@
 				      <div class="transbox">
 					<span style=" -webkit-text-stroke: 1px black; font-size:80%">
 					  <p> Kjører samme programvare som edx.org</p>
-					  <p> Alt edX kan gjøre kan vi gjøre!</p>
-					  <p> Spesielt: lage høykvalitets-kurs innenfor <em>alle fagområder</em></p>
+					  <p class="fragment"> Alt edX kan gjøre kan vi gjøre!</p>
+					  <p class="fragment"> Spesielt: lage høykvalitets-kurs innenfor <em>alle fagområder</em></p>
 				      </span>
 				      </div>
 				    </div>
@@ -174,10 +174,10 @@
 			      AkademiX 1.0
 			    </section>
 
-			    <section data-background="assets/akademix_1_0.png">
+			    <section>
+			      <img width="50%" src="assets/akademix_1_0.png">
 			         <span class="fragment">
 				    <div style="color: white;">
-				      <br><br><br><br><br><br><br><br><br><br>				     
 				      <div class="transbox">
 					<a href="http://158.37.86.200">Demo</a>
 				      </div>
@@ -188,8 +188,8 @@
 			    <section>
 			      <ul>
 				<li>Oppdatert design </li><br>
-				<li class="fragment">Feide login! </li><br>
 				<li class="fragment">Bedre tilpasset mobil</li><br>
+				<li class="fragment">Feide login! </li><br>
 				<li class="fragment">Ny funksjonalitet </li><br>
 				<li class="fragment">Oppskalert "back-end": støtte for enda flere samtidige brukere. </li><br>
 				<li class="fragment"><b>Åpen for innspill og forslag! </b> (Vi tar det til slutt).
@@ -202,8 +202,18 @@
 			    <h3>Workshop</h3>
 
 			    <div class="fragment">
-			      <a href="http://akademix.no/workshop">akademix.no/workshop</a>
+			      <p> Gjennomgår hvordan en syr sammen et nettkurs, ikke hvordan en produserer videomateriell</p>
+			      <div class="fragment">
+				  <a href="http://www.hib.no/om-hogskolen/senter-for-nye-medier/">
+				  <img width="50%" src="assets/sfnm.png">
+				  </a>
+				<p>
+				</p>
+			      </div>
 			    </div>
+			  </section>
+			  <section>
+			      <a href="http://akademix.no/workshop">akademix.no/workshop</a>
 			  </section>
 			
 					
