--- a/intro-presentasjon/workshop2016.html
+++ b/intro-presentasjon/workshop2016.html
@@ -158,6 +158,7 @@
 					  <p> Kjører samme programvare som edx.org</p>
 					  <p class="fragment"> Alt edX kan gjøre kan vi gjøre!</p>
 					  <p class="fragment"> Spesielt: lage høykvalitets-kurs innenfor <em>alle fagområder</em></p>
+					  <p class="fragment"> Inkludert private støttekurs til ordinære kurs</p>
 				      </span>
 				      </div>
 				    </div>
@@ -167,7 +168,7 @@
 
 			  <section>
 			    <section>
-			      <h3>De neste steg?</h3>
+			      <h3>Neste steg?</h3>
 			    </section>
 
 			    <section>
@@ -175,14 +176,17 @@
 			    </section>
 
 			    <section>
-			      <img width="50%" src="assets/akademix_1_0.png">
-			         <span class="fragment">
-				    <div style="color: white;">
-				      <div class="transbox">
-					<a href="http://158.37.86.200">Demo</a>
-				      </div>
-				    </div>
-				 </span>
+			      <a href="assets/main_screen1.png">
+				<img width="40%" src="assets/main_screen1.png">
+			      </a>
+			      <a href="assets/main_screen2.png">
+				<img width="40%" src="assets/main_screen2.png">
+			      </a>
+			      <a href="assets/course_screen1.png">
+				<img width="35%" src="assets/course_screen1.png">
+			      </a>
+			      <a href="http://158.37.86.200">Demo</a>
+
 			    </section>
 
 			    <section>
@@ -204,12 +208,11 @@
 			    <div class="fragment">
 			      <p> Gjennomgår hvordan en syr sammen et nettkurs, ikke hvordan en produserer videomateriell</p>
 			      <div class="fragment">
+				<p>Mange modeller for videoproduksjon. Fra PowerPoint på kontoret til Senter for nye medier</p>
 				  <a href="http://www.hib.no/om-hogskolen/senter-for-nye-medier/">
 				  <img width="50%" src="assets/sfnm.png">
 				  </a>
-				<p>
-				</p>
-			      </div>
+			      </p>
 			    </div>
 			  </section>
 			  <section>
